force-app/main/default/objects/ASF_Case_Rule__c/ASF_Case_Rule__c.object-meta.xml
<CustomObject>
    <label>Case Rule</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>