force-app/main/default/objects/ASF_Case_Rule__c/fields/Approval_Style__c.field-meta.xml
<CustomField>
    <fullName>Approval_Style__c</fullName>
    <label>Approval Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>UnAnimous</fullName>
            </value>
            <value>
                <fullName>Non-Unanimous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>