force-app/main/default/objects/ASF_Case_Rule__c/fields/Approval_Success_Fields_to_Update__c.field-meta.xml
<CustomField>
    <fullName>Approval_Success_Fields_to_Update__c</fullName>
    <label>Approval Success Fields to Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>