force-app/main/default/objects/ASF_Case_Rule__c/fields/Approval_Success_Stage_Movement__c.field-meta.xml
<CustomField>
    <fullName>Approval_Success_Stage_Movement__c</fullName>
    <label>Approval Success Stage Movement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>