force-app/main/default/objects/ASF_Case_Rule__c/fields/Assign_to_Initiator__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_Initiator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign to Initiator</label>
    <type>Checkbox</type>
</CustomField>