force-app/main/default/objects/ASF_Case_Rule__c/fields/Assigned_Error_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Error_Queue_Id__c</fullName>
    <label>Assigned Error Queue Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>