force-app/main/default/objects/ASF_Case_Rule__c/fields/Assigned_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Queue_Id__c</fullName>
    <label>Assigned Queue Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>