force-app/main/default/objects/ASF_Case_Rule__c/fields/Assignment_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Queue_Name__c</fullName>
    <label>Assignment Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>