force-app/main/default/objects/ASF_Case_Rule__c/fields/C3ExternalId__c.field-meta.xml
<CustomField>
    <fullName>C3ExternalId__c</fullName>
    <formula>Case_Stage_Config__r.Case_Category_Config__r.CCC_External_Id__c</formula>
    <label>C3ExternalId</label>
    <type>Text</type>
</CustomField>