force-app/main/default/objects/ASF_Case_Rule__c/fields/Case_Stage_Config__c.field-meta.xml
<CustomField>
    <fullName>Case_Stage_Config__c</fullName>
    <label>Case Stage Config</label>
    <referenceTo>ASF_Case_Stage_Config__c</referenceTo>
    <relationshipLabel>Case Rules</relationshipLabel>
    <relationshipName>Case_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>