force-app/main/default/objects/ASF_Case_Rule__c/fields/Fields_Api_Names__c.field-meta.xml
<CustomField>
    <fullName>Fields_Api_Names__c</fullName>
    <label>Fields Api Names</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>