force-app/main/default/objects/ASF_Case_Rule__c/fields/Logical_Condition__c.field-meta.xml
<CustomField>
    <fullName>Logical_Condition__c</fullName>
    <label>Logical Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>