force-app/main/default/objects/ASF_Case_Rule__c/fields/Overall_SLA_Closure__c.field-meta.xml
<CustomField>
    <fullName>Overall_SLA_Closure__c</fullName>
    <label>Overall SLA Closure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>