force-app/main/default/objects/ASF_Case_Rule__c/fields/SLA_override_value_in_Hrs__c.field-meta.xml
<CustomField>
    <fullName>SLA_override_value_in_Hrs__c</fullName>
    <label>SLA override value (in Hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>