force-app/main/default/objects/ASF_Case_Rule__c/fields/SLA_Rule_Identifier__c.field-meta.xml
<CustomField>
    <fullName>SLA_Rule_Identifier__c</fullName>
    <label>SLA Rule Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>