force-app/main/default/objects/ASF_Case_Rule__c/fields/Stage_external_ID__c.field-meta.xml
<CustomField>
    <fullName>Stage_external_ID__c</fullName>
    <formula>Case_Stage_Config__r.Stage_External_Id__c</formula>
    <label>Stage external ID</label>
    <type>Text</type>
</CustomField>