force-app/main/default/objects/ASF_Case_Rule__c/fields/Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Stage_Name__c</fullName>
    <formula>Case_Stage_Config__r.StageName__c</formula>
    <label>Stage Name</label>
    <type>Text</type>
</CustomField>