force-app/main/default/objects/ASF_Case_Rule__c/fields/Stage_SLA_Override_2__c.field-meta.xml
<CustomField>
    <fullName>Stage_SLA_Override_2__c</fullName>
    <label>Stage SLA Override 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>