force-app/main/default/objects/ASF_Case_Rule__c/fields/Step_1_Approver_1__c.field-meta.xml
<CustomField>
    <fullName>Step_1_Approver_1__c</fullName>
    <label>Step 1 Approver 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>