force-app/main/default/objects/ASF_Case_Rule__c/fields/Step_1_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>Step_1_Approver_2__c</fullName>
    <label>Step 1 Approver 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>