force-app/main/default/objects/ASF_Case_Rule__c/fields/Step_2_Approver_1__c.field-meta.xml
<CustomField>
    <fullName>Step_2_Approver_1__c</fullName>
    <label>Step 2 Approver 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>