force-app/main/default/objects/ASF_Case_Rule__c/fields/Total_steps__c.field-meta.xml
<CustomField>
    <fullName>Total_steps__c</fullName>
    <label>Total steps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>