force-app/main/default/objects/ASF_Case_Rule__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approval</fullName>
            </value>
            <value>
                <fullName>Assignment</fullName>
            </value>
            <value>
                <fullName>Checklists</fullName>
            </value>
            <value>
                <fullName>SLA Override</fullName>
            </value>
            <value>
                <fullName>Stage Movement</fullName>
            </value>
            <value>
                <fullName>Validation</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>